--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
-          registry: ghcr.io
+          registry: jerrioh
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}
       - name: Build and push
@@ -27,5 +27,5 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/my-container-test:latest
-            ghcr.io/${{ github.repository_owner }}/my-container-test:${{ env.RELEASE_VERSION }
+            jerrioh/${{ github.repository_owner }}/github-action-demo:latest
+            jerrioh/${{ github.repository_owner }}/github-action-demo:${{ env.RELEASE_VERSION }
