--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,30 +2,32 @@ name: ci
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - 'main'
 
 jobs:
-  image-push:
+  docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      -
+        name: Checkout
         uses: actions/checkout@v2
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
-      - name: Set up Docker Buildx
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Login to GitHub Container Registry
+      -
+        name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          registry: ghcr.io
           username: jerrioh
           password: ${{ secrets.CR_PAT }}
-      - name: Build and push
+      -
+        name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
           push: true
-          tags: |
-            jerrioh/${{ github.repository_owner }}/github-action-demo:latest
-            jerrioh/${{ github.repository_owner }}/github-action-demo:${{ env.RELEASE_VERSION }}
+          tags: user/app:latest
