--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,13 +5,27 @@ on:
     branches: [ 'master' ]
 
 jobs:
-  docker:
+  build:
     runs-on: ubuntu-latest
     steps:
-
-      - name: Check Out Repo 
+    
+      - name: Check Out Repo
         uses: actions/checkout@v2
-
+        
+      - uses: actions/setup-java@v2
+        with:
+          distribution: temurin
+          java-version: 11
+          
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2          
+        
+      - name: Grant Permissions to gradlew
+        run: chmod +x gradlew
+        
+      - name: Execute Gradle build
+        run: ./gradlew build
+        
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
